--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ OPENAI_API_KEY=
 MODEL_ID="gpt-4o"
 
 # AWS Configuration
-AWS_REGION=us-east-2
+AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
